SERVER-56756 fassert in stepup/down when RSTL timeout is above threshold